
CFLAGS=-I.. -g -Wall -W -Wunused -Wmissing-prototypes -Wcast-qual -Wcast-align -Werror


noinst_LIBRARIES=libdudldb.a
libdudldb_a_SOURCES= album.c \
	artist.c \
	dudldb.c \
	filter.c \
	history.c \
	queue.c \
	random.c \
	tag.c \
	track.c \
	user.c \
	\
	dudldb.h \
	filter.h \
	queue.h \
	track.h \
	user.h
