
AM_CFLAGS=-I.. -g -Wall -W -Wunused -Wmissing-prototypes -Wcast-qual -Wcast-align -Werror


noinst_LIBRARIES=libdudldb.a
libdudldb_a_SOURCES= \
	dudldb.c \
	artist.c \
	album.c \
	track.c \
	filter.c \
	user.c \
	history.c \
	queue.c \
	random.c \
	tag.c \
	sfilter.c \
	\
	dudldb.h \
	filter.h \
	queue.h \
	track.h \
	user.h
